Update VirtualTrees.BaseTree.pas from upstream

--- a/Demos/Advanced/AlignDemo.lfm
+++ b/Demos/Advanced/AlignDemo.lfm
@@ -76,7 +76,6 @@ object AlignForm: TAlignForm
     Top = 2
     Width = 553
     Anchors = [akTop, akLeft, akRight, akBottom]
-    CheckImageKind = ckDarkTick
     ClipboardFormats.Strings = (
       'CSV'
       'HTML Format'
@@ -142,13 +141,15 @@ object AlignForm: TAlignForm
     RootNodeCount = 6
     SelectionCurveRadius = 5
     ShowHint = True
+    StateImages = TreeImages
     TabOrder = 0
     TreeOptions.AnimationOptions = [toAnimatedToggle]
     TreeOptions.AutoOptions = [toAutoDropExpand, toAutoScroll, toAutoTristateTracking, toAutoDeleteMovedNodes]
-    TreeOptions.MiscOptions = [toEditable, toFullRepaintOnResize, toInitOnSave, toToggleOnDblClick, toWheelPanning]
+    TreeOptions.MiscOptions = [toAcceptOLEDrop, toCheckSupport, toEditable, toFullRepaintOnResize, toInitOnSave, toToggleOnDblClick, toWheelPanning]
     TreeOptions.PaintOptions = [toHideFocusRect, toShowButtons, toShowDropmark, toShowRoot, toShowTreeLines, toThemeAware]
     TreeOptions.SelectionOptions = [toExtendedFocus, toMultiSelect]
     OnFocusChanged = AlignTreeFocusChanged
+    OnFreeNode = AlignTreeFreeNode
     OnGetText = AlignTreeGetText
     OnPaintText = AlignTreePaintText
     OnGetImageIndex = AlignTreeGetImageIndex
