--- a/Demos/Minimal/Main.lfm
+++ b/Demos/Minimal/Main.lfm
@@ -28,23 +28,28 @@ object MainForm: TMainForm
     Colors.HotColor = clBlack
     DefaultText = 'Node'
     Header.AutoSizeIndex = -1
-    Header.Columns = <>
     Header.DefaultHeight = 17
     Header.Font.Height = -11
     Header.Font.Name = 'MS Sans Serif'
     Header.MainColumn = -1
-    Header.Options = [hoColumnResize, hoDrag]
+    Header.Options = [hoColumnResize, hoDrag, hoShowSortGlyphs, hoVisible]
+    HintAnimation = hatNone
     IncrementalSearch = isAll
     RootNodeCount = 100
     TabOrder = 0
     TreeOptions.AnimationOptions = [toAnimatedToggle]
-    TreeOptions.AutoOptions = [toAutoDropExpand, toAutoTristateTracking]
     TreeOptions.MiscOptions = [toEditable, toInitOnSave, toToggleOnDblClick, toWheelPanning]
     TreeOptions.PaintOptions = [toShowButtons, toShowRoot, toShowTreeLines, toThemeAware, toUseBlendedImages]
-    TreeOptions.SelectionOptions = [toMultiSelect, toCenterScrollIntoView]
+    TreeOptions.SelectionOptions = [toMultiSelect]
     OnFreeNode = VSTFreeNode
     OnGetText = VSTGetText
     OnInitNode = VSTInitNode
+    Columns = <
+      item
+        Position = 0
+        Width = 300
+        WideText = 'Name'
+      end>
   end
   object ClearButton: TButton
     Left = 97
